addressing review comments, plus use URL for relative URI